traefik/33-admin-to-base-middelware.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-redirectscheme
spec:
  replacePath:
    path: "/"
