traefik/33-http-to-https-middelware.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirectscheme
spec:
  redirectScheme:
    scheme: https
