traefik/40-dashboard.yaml
#traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefiktls-dashboard
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.alkem.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev.alkem.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: http-redirectscheme
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: default
